<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragments.ConverterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:text="@string/currency_converter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/from_currency_button"
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true">

            <TextView
                android:id="@+id/from_currency_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/usd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/from_currency_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/from_currency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/american_dollar"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imv_arrow1"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/from_imv"
                app:layout_constraintTop_toBottomOf="@+id/from_currency_country_code"
                app:layout_constraintVertical_bias="0.3" />

            <ImageView
                android:id="@+id/from_imv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/usa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imv_arrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <EditText
            android:id="@+id/etTypeCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:scaleType="center"
            android:layout_height="50dp"
            android:background="@drawable/layout_bg"
            android:layout_weight="1"
            android:src="@drawable/ic_equal" />

        <Space
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:background="@drawable/layout_button_bg"
            android:layout_weight="2"
            android:text="@string/switch_currencies"
            />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/to_currency_button"
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true">

            <TextView
                android:id="@+id/to_currency_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/uah"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/to_currency_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/to_currency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ukrainian_hryvnia"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imv_arrow2"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/to_imv"
                app:layout_constraintTop_toBottomOf="@+id/to_currency_country_code"
                app:layout_constraintVertical_bias="0.3" />

            <ImageView
                android:id="@+id/to_imv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ukr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imv_arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <EditText
            android:id="@+id/to_etTypeCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>


</LinearLayout>